feat: 项目架构之搭建layout架构

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -49,3 +49,9 @@ div:focus {
     height: 0;
   }
 }
+
+@import './variables.module.scss';
+@import './mixin.scss';
+@import './sidebar.scss';
+@import './element.scss';
+@import './transition.scss';
